--- a/src/main/webapp/ecommerce/paginas/processos/fechamentoVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/fechamentoVenda.xhtml
@@ -60,7 +60,7 @@
 								<h:outputText value="Alterar"></h:outputText>
 							</f:facet>
 							<h:commandLink
-								action="#{fechamentoVendaController.editarRecebimento(s)}"
+								action="#{fechamentoVendaController.editarRecebimento(s.codigo)}"
 								class="btn btn-success">
 								<span class="fas fa-pen"></span>
 							</h:commandLink>
@@ -82,12 +82,12 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<div class="col-4" style="margin-left: 70%;" align="left">
+						<div class="col-4" style="margin-left: 70%;" align="right">
 							<label>Troco</label>
 							<h:inputText
 								value="#{itemVendaController.vendaController.vendaDto.totalVenda}"
-								class="form-control bg-warning" id="txtTroco"
-								autocomplete="off" readonly="true"
+								class="form-control" id="txtTroco"
+								autocomplete="off"
 								converter="bigDecimalToCurrency"></h:inputText>
 						</div>
 					</div>
@@ -108,116 +108,6 @@
 						style="width: 120px; margin: 5px"></h:commandButton>
 				</div>
 			</div>
-
-			<div class="modal" id="pesquisarModalProduto">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-body">
-							<h4>Pesquisa de Produto</h4>
-							<div class="input-group-append">
-								<h:inputText value="#{itemVendaController.argumentoBusca}"
-									class="form-control" id="nomeProdutoPesquisado"
-									autocomplete="off" style="width: 100%">
-								</h:inputText>
-								&nbsp;
-								<h:commandLink class="btn btn-primary" type="button"
-									action="#{itemVendaController.pesquisarProduto}">
-									<span class="fas fa-search"></span>
-									<f:ajax execute="nomeProdutoPesquisado" render="tabela"></f:ajax>
-								</h:commandLink>
-							</div>
-							<br /> <br />
-							<h:dataTable border="0"
-								value="#{itemVendaController.listaProdutoDto}" var="t"
-								class="table table-hover"
-								columnClasses="center, left, colunaAceitar" id="tabela">
-								<h:column id="column1">
-									<f:facet name="header">
-										<h:outputText value="ID"></h:outputText>
-									</f:facet>
-									<h:outputText value="#{t.codigo}"></h:outputText>
-								</h:column>
-								<h:column id="column2">
-									<f:facet name="header">
-										<h:outputText value="Nome"></h:outputText>
-									</f:facet>
-									<h:outputText value="#{t.descricao}"></h:outputText>
-								</h:column>
-								<h:column id="column3">
-									<f:facet name="header">
-										<h:outputText value="Preço venda"></h:outputText>
-									</f:facet>
-									<h:outputText value="#{t.valorProduto}"
-										converter="bigDecimalToCurrency"></h:outputText>
-								</h:column>
-								<h:column id="column4">
-									<f:facet name="header">
-										<h:outputText value="Selecionar"></h:outputText>
-									</f:facet>
-									<h:commandLink
-										action="#{itemVendaController.selecionarProduto(t)}"
-										class="btn btn-success" pt:data-dismiss="modal">
-										<span class="fas fa-check"></span>
-										<f:ajax
-											render="@form:txtProduto @form:txtQuantidade @form:txtPrecounitario"></f:ajax>
-									</h:commandLink>
-								</h:column>
-							</h:dataTable>
-							<br />
-							<div align="right">
-								<button type="button" class="btn btn-danger"
-									data-dismiss="modal" style="width: 120px">Sair</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="modal" id="modalTabelaPreco">
-				<div class="modal-dialog modal-dialog-centered">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title">Forma e condição de pagamento</h5>
-							<button type="button" class="close" data-dismiss="modal"
-								aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						</div>
-						<div class="modal-body">
-							<div class="row mb-3">
-								<div class="col-8 offset-1">
-									<h:outputLabel>Forma de Pagamento</h:outputLabel>
-									<h:selectOneMenu class="form-control"
-										value="#{itemVendaController.formaPagamentoDto}">
-										<f:selectItems
-											value="#{itemVendaController.listaFormaPagamentoDto}" var="t"
-											itemLabel="#{t.descricao}" itemValue="0"></f:selectItems>
-									</h:selectOneMenu>
-								</div>
-							</div>
-							<div class="row mb-3">
-								<div class="col-8 offset-1">
-									<h:outputLabel>Condição de Pagamento</h:outputLabel>
-									<h:selectOneMenu class="form-control"
-										value="#{itemVendaController.condicaoPagamentoDto}">
-										<f:selectItems
-											value="#{itemVendaController.listaCondicaoPagamentoDto}"
-											var="t" itemLabel="#{t.descricao}" itemValue="0"></f:selectItems>
-									</h:selectOneMenu>
-								</div>
-							</div>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-primary"
-								data-dismiss="modal">Cancelar</button>
-							<h:commandButton type="button" class="btn btn-primary"
-								action="#{itemVendaController.chamarRecebimento}">Próximo</h:commandButton>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
 
 			<br></br>
 		</div>
