--- a/src/main/webapp/ecommerce/paginas/processos/fechamentoVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/fechamentoVenda.xhtml
@@ -59,8 +59,8 @@
 							<f:facet name="header">
 								<h:outputText value="Alterar"></h:outputText>
 							</f:facet>
-							<h:commandLink
-								action="#{fechamentoVendaController.editarRecebimento(s.codigo)}"
+							<h:commandLink pt:type="button" pt:data-toggle="modal"
+								id="chamarModalEditarParcela" pt:data-target="#modalEdicaoParcela"
 								class="btn btn-success">
 								<span class="fas fa-pen"></span>
 							</h:commandLink>
@@ -72,22 +72,21 @@
 			<div class="row mb-2">
 				<div class="form-inline">
 					<div class="form-group">
-						<div class="col-6" style="margin-left: 70%;" align="left">
+						<div class="col-8" style="margin-left: 70%;">
+							<label>Troco</label>
+							<h:inputText
+								value="#{itemVendaController.vendaController.vendaDto.totalVenda}"
+								class="form-control" id="txtTroco" autocomplete="off"
+								converter="bigDecimalToCurrency"></h:inputText>
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-4" style="margin-left: 70%;">
 							<label>Total Venda</label>
 							<h:inputText
 								value="#{itemVendaController.vendaController.vendaDto.totalVenda}"
 								class="form-control bg-warning" id="txtTotalVenda"
 								autocomplete="off" readonly="true"
-								converter="bigDecimalToCurrency"></h:inputText>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-4" style="margin-left: 70%;" align="right">
-							<label>Troco</label>
-							<h:inputText
-								value="#{itemVendaController.vendaController.vendaDto.totalVenda}"
-								class="form-control" id="txtTroco"
-								autocomplete="off"
 								converter="bigDecimalToCurrency"></h:inputText>
 						</div>
 					</div>
@@ -102,8 +101,7 @@
 					<h:commandButton action="#{fechamentoVendaController.voltar}"
 						value="Voltar" immediate="true" class="btn btn-primary"
 						style="width: 120px; margin: 5px"></h:commandButton>
-					<h:commandButton pt:type="button" pt:data-toggle="modal"
-						id="chamarModalTabelaDePreco" pt:data-target="#modalTabelaPreco"
+					<h:commandButton 
 						value="Próximo" class="btn btn-primary"
 						style="width: 120px; margin: 5px"></h:commandButton>
 				</div>
