--- a/src/main/webapp/ecommerce/paginas/processos/impressosVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/impressosVenda.xhtml
@@ -15,11 +15,14 @@
 		<div class="container bg-light rounded-bottom divcentral">
 			<ui:include src="/ecommerce/paginas/uteis/barramenu.xhtml" />
 			<br></br>
-			<h1 align="center">Abertura de Venda</h1>
+			<h1 align="center">Impressos de Venda</h1>
 			<br />
 			<div class="row mb-3 ml-5 pl-4">
-				<h:selectOneRadio immediate="true" value="Comprovante de Venda">
-				</h:selectOneRadio>
+				<h:selectManyMenu value="#{impressosVendaController.listaOpcoes}" var="s" label="">
+					<h:selectOneMenu immediate="true">
+					</h:selectOneMenu>
+				</h:selectManyMenu>
+
 			</div>
 			<div class="row mb-2 ml-5 pl-3">
 				<div class="col-6 offset-3" align="right">
@@ -28,8 +31,7 @@
 						style="width: 120px; margin: 5px"></h:commandButton>
 					<h:commandButton action="#{vendaController.chamarItensVenda}"
 						value="Próximo" class="btn btn-primary needs-validation"
-						style="width: 120px; margin: 5px"
-					></h:commandButton>
+						style="width: 120px; margin: 5px"></h:commandButton>
 				</div>
 			</div>
 			<br></br>
