--- a/src/main/webapp/ecommerce/paginas/processos/fechamentoVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/fechamentoVenda.xhtml
@@ -96,7 +96,7 @@
 						<div class="col-12">
 							<label>Total Venda</label>
 							<h:inputText
-								value="#{itemVendaController.resultadoRecebimento}"
+								value="#{itemVendaController.totalRecebimento}"
 								class="form-control bg-warning" id="txtTotalVenda"
 								autocomplete="off" readonly="true"
 								converter="bigDecimalToCurrency"></h:inputText>
