--- a/src/main/webapp/ecommerce/paginas/processos/aberturaVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/aberturaVenda.xhtml
@@ -24,9 +24,11 @@
 						<h:inputText value="#{vendaController.vendaDto.idCliente}"
 							class="form-control col-2" id="txtIdCliente" autocomplete="off"
 							required="true">
-							<f:ajax listener="#{vendaController.carregarCliente}" 
-								execute="txtIdCliente" render="txtIdCliente txtNomeCliente txtNomeClienteOculto" event="blur" onevent="bloquearBotoesClasseNeedsValidation"></f:ajax>
+							<f:ajax listener="#{vendaController.carregarCliente}"
+								execute="txtIdCliente" render="txtIdCliente txtNomeCliente"
+								event="blur" onevent="bloquearBotoesClasseNeedsValidation"></f:ajax>
 						</h:inputText>
+						<label>&#160;</label>
 						<label>&#160;</label>
 						<h:inputText value="#{vendaController.vendaDto.nomeCliente}"
 							class="form-control col-8" id="txtNomeCliente" autocomplete="off"
@@ -37,11 +39,6 @@
 							<span class="fas fa-search"></span>
 						</button>
 						<h:message for="txtIdCliente" showDetail="false"
-							showSummary="true" styleClass="error" />
-						<label>&#160;</label>
-						<label>&#160;</label>
-						<h:inputHidden value="#{vendaController.vendaDto.nomeCliente}" class="form-control col-8" required="true" id="txtNomeClienteOculto"></h:inputHidden>
-						<h:message for="txtNomeClienteOculto" showDetail="false"
 							showSummary="true" styleClass="error" />
 					</div>
 				</div>
@@ -56,7 +53,8 @@
 							autocomplete="off" required="true">
 							<f:ajax listener="#{vendaController.carregarFuncionario}"
 								execute="txtIdFuncionario"
-								render="txtIdFuncionario txtNomeFuncionario txtNomeFuncionarioOculto" event="blur" onevent="bloquearBotoesClasseNeedsValidation"></f:ajax>
+								render="txtIdFuncionario txtNomeFuncionario" event="blur"
+								onevent="bloquearBotoesClasseNeedsValidation"></f:ajax>
 						</h:inputText>
 						<label>&#160;</label>
 						<h:inputText value="#{vendaController.vendaDto.nomeFuncionario}"
@@ -70,12 +68,7 @@
 						</button>
 						<h:message for="txtIdFuncionario" showDetail="false"
 							showSummary="true" styleClass="error" />
-						<label>&#160;</label>
-						<label>&#160;</label>
-						<h:inputHidden value="#{vendaController.vendaDto.nomeFuncionario}" class="form-control col-8" required="true" id="txtNomeFuncionarioOculto">
-						</h:inputHidden>
-						<h:message for="txtNomeFuncionarioOculto" showDetail="false"
-							showSummary="true" styleClass="error" />
+						<label>&#160;</label> <label>&#160;</label>
 					</div>
 				</div>
 
@@ -101,8 +94,7 @@
 						style="width: 120px; margin: 5px"></h:commandButton>
 					<h:commandButton action="#{vendaController.chamarItensVenda}"
 						value="Próximo" class="btn btn-primary needs-validation"
-						style="width: 120px; margin: 5px"
-					></h:commandButton>
+						style="width: 120px; margin: 5px"></h:commandButton>
 				</div>
 			</div>
 
