--- a/src/main/webapp/ecommerce/paginas/processos/ajusteEstoque.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/ajusteEstoque.xhtml
@@ -24,9 +24,9 @@
 				</div>
 			</div>
 			
-			<div class="row mb-3 ml-5 pl-4">
-				<label class="col-12 offset-2">Produto</label>
-				<div class="form-inline offset-2">
+			<div class="row mb-3 ml-5">
+				<label class="col-12 offset-3">Produto</label>
+				<div class="form-inline offset-3">
 					<div class="form-group ml-3">
 						<h:inputText
 							value="#{ajusteEstoqueController.ajusteEstoqueDto.idProDuto}"
@@ -51,8 +51,8 @@
 				</div>
 
 			</div>
-			<div class="row mb-3 ml-5 pl-4">
-				<div class="col-7 offset-2">
+			<div class="row mb-3 ml-5 offset-3">
+				<div class="col-7 ">
 					<label>Motivo</label>
 					<h:inputText value="#{ajusteEstoqueController.ajusteEstoqueDto.motivo}"
 						class="form-control" align="center" id="txtusuario"
@@ -63,7 +63,7 @@
 			</div>
 			
 			<div class="row mb-3 ml-5 pl-4">
-				<div class="col-3 offset-2">
+				<div class="col-3 offset-3">
 					<label>Data</label>
 					<h:inputText value="#{ajusteEstoqueController.ajusteEstoqueDto.dataAjuste}"
 						class="form-control" id="txtData" autocomplete="off"
