--- a/src/main/webapp/ecommerce/paginas/uteis/inicial.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/inicial.xhtml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="jakarta.faces.core" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
 	<title>Ecommerce</title>
 	<ui:include src="/ecommerce/paginas/uteis/scripts.xhtml" />
@@ -20,7 +20,7 @@
 			</div>
 			<div class="row mt-3">
 				<div class="col" align="center">
-					<span style="font-size: 20pt; font-style: italic;" class="text-info">&nbsp; Make it better...</span>
+                                    <span style="font-size: 20pt; font-style: italic;" class="text-info">&nbsp; Make it better...</span>
 				</div>
 			</div>
 		</div>
