--- a/src/main/webapp/ecommerce/paginas/uteis/menuprocesso.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menuprocesso.xhtml
@@ -33,7 +33,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row" align="center">
+			<div class="row mb-4" align="center">
 				<div class="col-12">
 					<div class="btn btn-group dropright" >
 						<button type="button" class="btn btn-info dropdown-toggle" style="width: 180px"
