--- a/src/main/webapp/ecommerce/paginas/uteis/mensagemConversacao.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/mensagemConversacao.xhtml
@@ -18,7 +18,7 @@
 					<h:messages showDetail="true" id="msg" showSummary="true"
 						globalOnly="true" infoClass="text-info mensagemInfo"
 						warnClass="text-warning mensagemWarning"
-						errorClass="text-dark mensagemError" layout="list" rendered="true"/>
+						errorClass="text-dark mensagemError" layout="list" rendered="true" />
 				</div>
 			</div>
 			<div class="row">
@@ -29,8 +29,7 @@
 			<div class="row">
 				<div class="col-8 offset-2 mt-4 text-dark"
 					style="text-align: center;">
-					Ocorreu uma exceção no sistema. Por favor entre em contato com o
-					suporte. <br /> <br />
+					<br />
 					<h:commandLink action="/ecommerce/paginas/uteis/inicial.xhtml">
 						<span style="font-size: 20pt;" class="fas fa-home text-info"></span>
 					</h:commandLink>
@@ -38,7 +37,8 @@
 					<h:commandLink action="/ecommerce/paginas/uteis/inicial.xhtml"
 						value="Ir para a tela inicial" class="text-info"></h:commandLink>
 					<br /> <br />
-					<h:outputLabel value="Você está tentando acessar um processo que terminou ou o tempo de interação acabou. Volte a tela inicial e começe outro processo!"></h:outputLabel>
+					<h:outputLabel
+						value="Você está tentando acessar um processo que terminou ou o tempo de interação acabou. Volte a tela inicial e começe outro processo!"></h:outputLabel>
 				</div>
 			</div>
 		</div>
